chore: adicionado exemplo de expressao pelo nome do atributo